--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <form action="" method="post">
         <p>Digite seu nome</p>
-<input type="text" name="Digite seu nome"  >
+ <input type="text" name= "Digite seu nome"  >
+    <br>
+ <input type="email" name="e-mail">
+    <br>
+    <input type="number" name="phone">
     </form>
 </body>
 </html>
