--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
  <input type="email" name="e-mail">
     <br>
     <input type="number" name="phone">
+    <br>
+   <input type="radio" name="você pratica exercicios">
     </form>
 </body>
 </html>
