--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>Digite seu nome</p>
  <input type="text" name= "Digite seu nome"  >
     <br>
- <input type="email" name="e-mail">
+ <input type="email" name="e-mail" value="@gmail.com">
     <br>
     <input type="number" name="phone">
     <br>
