--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <br>
     <input type="number" name="phone">
     <br>
-   <input type="radio" name="você pratica exercicios">
+   <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
+   <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
     </form>
 </body>
 </html>
