--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <br>
     <input type="number" name="phone">
     <br>
+    <p>Você pratica algum exercicio ?</p>
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
     </form>
