--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>Você pratica algum exercicio ?</p>
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
+   <br>
+   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esports 
     </form>
 </body>
 </html>
