--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
    <br>
-   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esports 
+   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes 
     </form>
 </body>
 </html>
