--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <form action="" method="post">
         <p>Digite seu nome</p>
- <input type="text" name= "Digite seu nome"  >
+ <input type="text" name= "Digite seu nome" placeholder="Vitor roque" >
     <br>
  <input type="email" name="e-mail" value="@gmail.com">
     <br>
