--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
  <input type="email" name="e-mail" value="@gmail.com">
     <br>
-    <input type="number" name="phone">
+    <input type="number" name="phone" placeholder="(dd)XXXXX-XXXX">
     <br>
     <p>Você pratica algum exercicio ?</p>
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
