--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <p>Digite seu nome</p>
  <input type="text" name= "Digite seu nome" placeholder="Vitor roque" >
     <br>
+    <p>Digite seu email</p>
  <input type="email" name="e-mail" value="@gmail.com">
     <br>
+    <p>Digite seu numero</p>
     <input type="number" name="phone" placeholder="(dd)XXXXX-XXXX">
     <br>
     <p>Você pratica algum exercicio ?</p>
