--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
    <br>
+   <select name="estado">
+     <option value="1">Paraná</option>
+     <option value="2">AC</option>
+     <option value="3">AL</option>
+     <option value="4">AP</option>
+     <option value="5">AM</option>
+     <option value="6">BA</option>
+     <option value="7">CE</option>
+     <option value="8">DF</option>
+     <option value="9">ES</option>
+     <option value="10">GO</option>
+     <option value="11">MA</option>
+     <option value="12">MT</option>
+     <option value="13">MS</option>
+     <option value="14">MG</option>
+     <option value="15">PA</option>
+     <option value="16">PB</option>
+     <option value="17">PE</option>
+     <option value="18">PI</option>
+     <option value="19">RJ</option>
+     <option value="20">RN</option>
+     <option value="21">RS</option>
+     <option value="22">RO</option>
+     <option value="23">RR</option>
+     <option value="24">SC</option>
+     <option value="25">SP</option>
+     <option value="26">SE</option>
+     <option value="27">TO</option>
+   </select>
    <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes 
     </form>
 </body>
