--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
      <option value="26">SE</option>
      <option value="27">TO</option>
    </select>
-   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes 
+   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes
+   <button type="submit"> Enviar</button>
+   <button type="reset"> Apagar</button>
     </form>
 </body>
 </html>
