--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
     <form action="" method="post">
         <p>Digite seu nome</p>
- <input type="text" name= "Digite seu nome" placeholder="Vitor roque" >
+ <input type="text" name= "Digite seu nome" placeholder="Vitor roque" required>
     <br>
     <p>Digite seu email</p>
- <input type="email" name="e-mail" value="@gmail.com">
+ <input type="email" name="e-mail" value="@gmail.com" required>
     <br>
     <p>Digite seu numero</p>
-    <input type="number" name="phone" placeholder="(dd)XXXXX-XXXX">
+    <input type="number" name="phone" placeholder="(dd)XXXXX-XXXX" required>
     <br>
     <p>Você pratica algum exercicio ?</p>
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
    <br>
-   <select name="estado">
+   <select name="estado" required>
      <option value="1">Paraná</option>
      <option value="2">AC</option>
      <option value="3">AL</option>
