--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
    <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
    <br>
-   <p>Qual é seu estado</p>
+   <p>Qual é seu estado ?</p>
    <select name="estado" required>
      <option value="1">Paraná</option>
      <option value="2">AC</option>
