--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
      <option value="27">TO</option>
    </select>
    <br>
+   <p>Elogios</p>
+   <textarea name="Elogios"></textarea required>
+   <br>
    <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes
    <button type="submit"> Enviar</button>
    <button type="reset"> Apagar</button>
