--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Formulário Bom de Bola</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/mgvwzoep" method="post">
         <p>Digite seu nome</p>
  <input type="text" name= "Digite seu nome" placeholder="Vitor roque" required>
     <br>
@@ -52,7 +52,7 @@
    </select>
    <br>
    <p>Elogios</p>
-   <textarea name="Elogios"></textarea required>
+   <textarea name="Elogios" required></textarea>
    <br>
    <br>
    <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes
