--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <input type="number" name="phone" placeholder="(dd)XXXXX-XXXX" required>
     <br>
     <p>Você pratica algum exercicio ?</p>
-   <input type="radio" name="você pratica exercicios" value="Sim"> Com certeza
-   <input type="radio" name="você pratica exercicios" value="Não"> Sem certeza
+   <input type="radio" name="você pratica exercicios" value="Não"> Não sou preguiçoso 😴
+   <input type="radio" name="você pratica exercicios" value="Sim"> Sim sou atleta 😁
    <br>
    <p>Qual é seu estado ?</p>
    <select name="estado" required>
@@ -55,7 +55,7 @@
    <textarea name="Elogios" required></textarea>
    <br>
    <br>
-   <input type="checkbox" name="Novidades"> Aceito receber novidades sobre esportes
+   <input type="checkbox" name="Novidades" required> Aceito receber novidades sobre esportes
    <button type="submit"> Enviar</button>
    <button type="reset"> Apagar</button>
     </form>
