--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário Bom de Bola</title>
+    <title>Avaliação</title>
 </head>
 <body>
     <form action="https://formspree.io/f/mgvwzoep" method="post">
@@ -49,6 +49,18 @@
      <option value="25">SP</option>
      <option value="26">SE</option>
      <option value="27">TO</option>
+   </select>
+   <br>
+   <p>Qual é Sua posição</p>
+   <select name="posição">
+    <option value="1">Goleiro</option>
+    <option value="2">zagueiro</option>
+    <option value="3">lateral</option>
+    <option value="4">volante</option>
+    <option value="5">meio campo</option>
+    <option value="6">atacante</option>
+    <option value="7">ponta direita</option>
+    <option value="8">ponta esquerda</option>
    </select>
    <br>
    <p>Elogios</p>
